# autoclipper

./: .dockerignore  .gitignore  CURSOR_CONTEXT.md  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  logs.txt  pyproject.toml
app/: db.py  main.py  models.py  queues.py  schemas.py  settings.py
app/routes/: admin.py  webhooks.py
app/services/analyze/: scenes.py  transcribe.py
app/services/clipper/: candidate_maker.py
app/services/editor/: ffmpeg_ops.py
app/services/fetcher/: youtube.py
app/services/intake/: allowlist_manager.py  campaign_watcher.py
app/services/monitor/: claims.py
app/workers/: beat.py  tasks.py
autoclipper/: .env.example  .gitignore  Makefile  pyproject.toml
autoclipper/app/services/analyze/: scoring.py
autoclipper/app/services/clipper/: ranker_llm.py
autoclipper/app/services/fetcher/: youtube.py
autoclipper/app/services/monitor/: claims.py
autoclipper/app/services/publisher/: youtube_upload.py
autoclipper/app/workers/: beat.py  tasks.py
autoclipper/config/presets/: default.yaml
autoclipper/infra/migrations/: 0001_init.sql
autoclipper/prompts/: rank_segments.txt
config/: allowlist.yaml  campaign_sources.yaml  campaigns_static.yaml
config/presets/: speed_preset_v2.yaml
